# sovereign-sql-engine

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
arctic-quantization/: README.md  common.py  prompts.py  push_to_hub.py  pyproject.toml  quantize_bnb8.py  quantize_gptq8.py  tensorize_gptq8.py  test_model.py
backend/: .env.example  Dockerfile  README.md  __init__.py  app.py  config.py  dependencies.py  logging_config.py  logic_models.py  lru_cache.py  metrics.py  middleware.py  models.py  pipeline_executor.py  prompts.py  pyproject.toml  response.json  sse_executor.py  start_test.sh  temp.py
backend/routes/: __init__.py  health.py  pipeline.py
backend/services/: __init__.py  advanced_sql_service.py  classifier_service.py  guard_service.py  http_utils.py  metadata_service.py  modal_chat.py  observability_service.py  pinecone_service.py  sql_execution_service.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/lib/: pipeline.js
infra/monitoring/: README.md  grafana-cloud.env.example  prometheus-entrypoint.sh  prometheus.yml  promtail-entrypoint.sh  promtail.yml
metadata_creation/: .env.example  README.md  conn_test.py  main.py  pyproject.toml  visibility_helpers 2.py
modal_deployment/: README.md  app.py  pyproject.toml  test.py  visibility_helpers 2.py
model_quantization/: .env.example  README.md  common.py  push_to_hub.py  pyproject.toml  quantize_awq4.py  quantize_bnb8.py  quantize_gptq8.py  tensorize_gptq8.py  visibility_helpers.py
pipeline_test/: .env.example  README.md  __init__.py  config.py  logging_utils.py  main.py  models.py  pipeline.py  prompts.py  pyproject.toml  sql_utils.py
pipeline_test/services/: classifier_service.py  guard_service.py  metadata_service.py  neo4j_service.py  pinecone_service.py  runpod_service.py
vllm_worker/: Dockerfile  README.md  build.sh  test_local.py
vllm_worker/.runpod/: README.md  hub.json
vllm_worker/builder/: requirements.txt
vllm_worker/docs/: configuration.md  conventions.md
vllm_worker/src/: download_model.py  engine_args.py  handler.py  tensorizer_helpers.py  utils.py  visibility_helpers.py
