[project]
name = "arctic-quantization"
version = "0.1.0"
description = "Utilities for quantizing, tensorizing, publishing, and testing Arctic Text2SQL models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "auto-gptq>=0.7.1",
    "bitsandbytes>=0.49.2",
    "huggingface-hub>=0.34.4",
    "tensorizer>=2.12.0",
    "torch>=2.10.0",
    "transformers>=4.57.0",
    "vllm>=0.18.0",
]

[tool.uv]
package = false
