[project]
name = "text2sql-pipeline-check"
version = "0.1.0"
description = "End-to-end pipeline checker for the NL to Text2SQL stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.28.1",
    "pinecone>=8.1.1",
    "python-dotenv>=1.2.2",
    "sqlitecloud>=0.0.84",
]

[project.scripts]
pipeline-check = "pipeline_test.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_test*"]


